tests/error/unresolved_anonymous_union.c
// fail "Undeclared identifier."

struct{
    union{
        struct unresolved a;
    };
} asd;
